# typenum-consts

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
dev-notes/: learnings.md
scripts/: check-all-features.sh  clippy-all-features.sh  package-all-features.sh  tests-all-features.sh  update-vendors.sh
src/: ast.rs  ast_macro.rs  dotenv.rs  exprs_impl.rs  lib.rs  macros.rs  no_std_formatter.rs  tnconst_impl.rs  types.rs  uconst_impl.rs
src/vendors/: mod.rs  rsc.rs
src/vendors/rsc/: README.md  mod.rs
src/vendors/rsc/src/: expr.rs  interpreter.rs  mod.rs  parser.rs  tokenizer.rs
tests/: test_eager_invoke.rs  test_exprs.rs  test_nconst.rs  test_pconst.rs  test_uconst.rs
trybuild_tests/compile_fails/: test_compile_fail.rs  test_compile_fail.stderr  test_dotenv_fail.rs  test_dotenv_fail.stderr
trybuild_tests/compile_passes/: test_compile_passes.rs  test_dotenv_passes.rs
typenum-consts-core/: Cargo.toml
typenum-consts-core/scripts/: check-all-features.sh  clippy-all-features.sh
typenum-consts-core/src/: exprs_impl.rs  lib.rs  tnconst_impl.rs  uconst_impl.rs
typenum-consts-core/tests/: .env.dev  test_exprs.rs  test_nconst.rs  test_pconst.rs  test_uconst.rs  trybuild.rs
typenum-consts-core/trybuild_tests/compile_passes/: .env.dev  test_dotenv_passes.rs
