[package]
name = "typenum-consts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.53", features = ["extra-traits", "full"] }
typenum = "1.17.0"

[dev-dependencies]
trybuild = "1.0.90"

[features]
"debug" = []